langkit/sustained/src/gpr_parser.h


typedef struct
{
   uint64_t serial_number;
} *gpr_analysis_context;
typedef struct
{
   uint64_t version_number;
} *gpr_analysis_unit;
typedef void* gpr_base_node;
typedef uint8_t gpr_bool;
typedef struct {
    uint32_t line;
    uint16_t column;
} gpr_source_location;
typedef struct {
    gpr_source_location start;
    gpr_source_location end;
} gpr_source_location_range;
typedef struct {
    uint32_t *chars;
    size_t length;
    int is_allocated;
} gpr_text;
typedef enum {
      GPR_TERMINATION = 0
      ,
      GPR_LEXING_FAILURE = 1
      ,
      GPR_IDENTIFIER = 2
      ,
      GPR_ALL = 3
      ,
      GPR_ABSTRACT = 4
      ,
      GPR_AT = 5
      ,
      GPR_CASE = 6
      ,
      GPR_END = 7
      ,
      GPR_FOR = 8
      ,
      GPR_IS = 9
      ,
      GPR_LIMITED = 10
      ,
      GPR_PRIVATE = 11
      ,
      GPR_NULL = 12
      ,
      GPR_OTHERS = 13
      ,
      GPR_PACKAGE = 14
      ,
      GPR_RENAMES = 15
      ,
      GPR_TYPE = 16
      ,
      GPR_USE = 17
      ,
      GPR_PRAGMA = 18
      ,
      GPR_WHEN = 19
      ,
      GPR_WITH = 20
      ,
      GPR_EXTENDS = 21
      ,
      GPR_PAR_OPEN = 22
      ,
      GPR_PAR_CLOSE = 23
      ,
      GPR_SEMICOLON = 24
      ,
      GPR_COLON = 25
      ,
      GPR_COMMA = 26
      ,
      GPR_DOT = 27
      ,
      GPR_AMP = 28
      ,
      GPR_TICK = 29
      ,
      GPR_PIPE = 30
      ,
      GPR_ASSIGN = 31
      ,
      GPR_ARROW = 32
      ,
      GPR_STRING = 33
      ,
      GPR_NUMBER = 34
      ,
      GPR_LABEL = 35
      ,
      GPR_CHAR = 36
      ,
      GPR_COMMENT = 37
      ,
      GPR_WHITESPACE = 38
} gpr_token_kind;
typedef struct
{
   uint64_t version;
} *gpr_token_data_handler;
typedef struct {
    gpr_analysis_context context;
    gpr_token_data_handler token_data;
    int token_index, trivia_index;
    gpr_token_kind kind;
    gpr_text text;
    gpr_source_location_range sloc_range;
} gpr_token;
typedef struct {
    gpr_source_location_range sloc_range;
    gpr_text message;
} gpr_diagnostic;
typedef enum {
      EXCEPTION_FILE_READ_ERROR,
      EXCEPTION_BAD_TYPE_ERROR,
      EXCEPTION_OUT_OF_BOUNDS_ERROR,
      EXCEPTION_INVALID_INPUT,
      EXCEPTION_INVALID_SYMBOL_ERROR,
      EXCEPTION_INVALID_UNIT_NAME_ERROR,
      EXCEPTION_NATIVE_EXCEPTION,
      EXCEPTION_PRECONDITION_FAILURE,
      EXCEPTION_PROPERTY_ERROR,
      EXCEPTION_TEMPLATE_ARGS_ERROR,
      EXCEPTION_TEMPLATE_FORMAT_ERROR,
      EXCEPTION_TEMPLATE_INSTANTIATION_ERROR,
      EXCEPTION_STALE_REFERENCE_ERROR,
      EXCEPTION_SYNTAX_ERROR,
      EXCEPTION_UNKNOWN_CHARSET,
      EXCEPTION_MALFORMED_TREE_ERROR,
} gpr_exception_kind;
typedef struct {
   gpr_exception_kind kind;
   const char *information;
} gpr_exception;
typedef struct gpr_gpr_node_array_record *gpr_gpr_node_array;
    typedef struct {
            gpr_internal_metadata md;
            gpr_env_rebindings_type rebindings;
            gpr_bool from_rebound;
    } gpr_internal_entity_info;
    typedef struct {
            gpr_base_node node;
            gpr_internal_entity_info info;
    } gpr_base_entity;
typedef void *gpr_event_handler;
typedef void (*gpr_event_handler_unit_requested_callback)(
   void *data,
   gpr_analysis_context context,
   gpr_text *name,
   gpr_analysis_unit from,
   gpr_bool found,
   gpr_bool is_not_found_error
);
typedef void (*gpr_event_handler_destroy_callback)(void *data);
typedef void (*gpr_event_handler_unit_parsed_callback)(
   void *data,
   gpr_analysis_context context,
   gpr_analysis_unit unit,
   gpr_bool reparsed
);
typedef void *gpr_file_reader;
typedef void (*gpr_file_reader_destroy_callback)(void *data);
typedef void (*gpr_file_reader_read_callback)(
   void *data,
   const char *filename,
   const char *charset,
   int read_bom,
   gpr_text *buffer,
   gpr_diagnostic *diagnostic
);
typedef void *gpr_unit_provider;
struct gpr_gpr_node_array_record {
   int n;
   int ref_count;
   gpr_base_entity items[1];
};
extern gpr_gpr_node_array
gpr_gpr_node_array_create(int length);
extern void
gpr_gpr_node_array_inc_ref(gpr_gpr_node_array a);
extern void
gpr_gpr_node_array_dec_ref(gpr_gpr_node_array a);
extern int
gpr_node_is_token_node(gpr_base_entity *node);
extern int
gpr_node_is_synthetic(gpr_base_entity *node);
extern void
gpr_node_image(gpr_base_entity *node,
                               gpr_text *result);
extern void
gpr_node_text(gpr_base_entity *node,
                              gpr_text *text);
extern void
gpr_node_sloc_range(gpr_base_entity *node,
                                    gpr_source_location_range *sloc_range);
extern void
gpr_lookup_in_node(gpr_base_entity *node,
                                   const gpr_source_location *sloc,
                                   gpr_base_entity *result_p);
extern unsigned
gpr_node_children_count(gpr_base_entity *node);
extern int
gpr_node_child(gpr_base_entity *node,
                               unsigned n,
                               gpr_base_entity* child_p);
extern char *
gpr_text_to_locale_string(gpr_text *text);
extern int gpr_gpr_node_parent(
    gpr_base_entity *node,
    gpr_base_entity *value_p
);
extern int gpr_gpr_node_parents(
    gpr_base_entity *node,
        gpr_bool
        with_self,
    gpr_gpr_node_array *value_p
);
extern gpr_event_handler
gpr_create_event_handler(
   void *data,
   gpr_event_handler_destroy_callback destroy_func,
   gpr_event_handler_unit_requested_callback unit_requested_func,
   gpr_event_handler_unit_parsed_callback unit_parsed_func
);
extern void
gpr_dec_ref_event_handler(gpr_event_handler self);
extern gpr_file_reader
gpr_create_file_reader(
   void *data,
   gpr_file_reader_destroy_callback destroy_func,
   gpr_file_reader_read_callback read_func
);
extern void
gpr_dec_ref_file_reader(gpr_file_reader self);
extern void
gpr_dec_ref_unit_provider(void *data);
extern const gpr_exception *
gpr_get_last_exception(void);
extern char *
gpr_exception_name(gpr_exception_kind kind);
extern char *
gpr_token_kind_name(gpr_token_kind kind);
extern void
gpr_token_next(gpr_token *token,
                               gpr_token *next_token);
extern void
gpr_token_previous(gpr_token *token,
                                   gpr_token *previous_token);
extern int
gpr_token_range_text(gpr_token *first,
                                     gpr_token *last,
                                     gpr_text *result);
extern gpr_bool
gpr_token_is_equivalent(gpr_token *left,
                                        gpr_token *right);