langkit/sustained/src/gpr_parser-implementation-c.ads


   function gpr_is_token_node
     (Node : gpr_base_entity_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_is_token_node";
   --  Return whether this node is a node that contains only a single token.

   function gpr_is_synthetic
     (Node : gpr_base_entity_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_is_synthetic";
   --  Return whether this node is synthetic.

   procedure gpr_node_image
     (Node : gpr_base_entity_Ptr; Result : access gpr_text)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_image";
   --  Return a representation of this node as a string.

   procedure gpr_node_text
     (Node : gpr_base_entity_Ptr;
      Text : access gpr_text)
      with Export, Convention => C,
           External_Name      => "gpr_node_text";
   --  Return the source buffer slice corresponding to the text that spans
   --  between the first and the last tokens of this node.
   --
   --  Note that this returns the empty string for synthetic nodes.

   procedure gpr_node_sloc_range
     (Node         : gpr_base_entity_Ptr;
      Sloc_Range_P : access gpr_source_location_range)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_sloc_range";
   --  Return the spanning source location range for this node.
   --
   --  Note that this returns the sloc of the parent for synthetic nodes.

   procedure gpr_lookup_in_node
     (Node   : gpr_base_entity_Ptr;
      Sloc   : gpr_source_location;
      Result : gpr_base_entity_Ptr)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_lookup_in_node";
   --  Return the bottom-most node from in ``Node`` and its children which
   --  contains ``Sloc``, or ``NULL`` if there is none.

   function gpr_node_children_count
     (Node : gpr_base_entity_Ptr) return unsigned
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_children_count";
   --  Return the number of children in this node.

   function gpr_node_child
     (Node    : gpr_base_entity_Ptr;
      N       : unsigned;
      Child_P : gpr_base_entity_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_node_child";
   --  Return the Nth child for in this node's fields and store it into
   --  ``*child_p``.  Return zero on failure (when ``N`` is too big).

   function gpr_text_to_locale_string
     (Text : gpr_text) return System.Address
      with Export        => True,
           Convention    => C,
           External_name => "gpr_text_to_locale_string";
   --  Encode some text using the current locale. The result is dynamically
   --  allocated: it is up to the caller to free it when done with it.
   --
   --  This is a development helper to make it quick and easy to print token
   --  and diagnostic text: it ignores errors (when the locale does not support
   --  some characters). Production code should use real conversion routines
   --  such as libiconv's in order to deal with UTF-32 texts.

   ------------------
   -- File readers --
   ------------------

   function gpr_create_file_reader
     (Data         : System.Address;
      Destroy_Func : gpr_file_reader_destroy_callback;
      Read_Func    : gpr_file_reader_read_callback) return gpr_file_reader
      with Export        => True,
           Convention    => C,
           External_name => "gpr_create_file_reader";
   --  Create a file reader. When done with it, the result must be passed to
   --  ``gpr_dec_ref_file_reader``.
   --
   --  Pass as ``data`` a pointer to hold your private data: it will be passed
   --  to all callbacks below.
   --
   --  ``destroy`` is a callback that is called by ``gpr_dec_ref_file_reader``
   --  to leave a chance to free resources that ``data`` may hold.
   --
   --  ``read`` is a callback. For a given filename/charset and whether to read
   --  the BOM (Byte Order Mark), it tries to fetch the contents of the source
   --  file, returned in ``Contents``. If there is an error, it must return it
   --  in ``Diagnostic`` instead.

   procedure gpr_dec_ref_file_reader
     (File_Reader : gpr_file_reader)
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_dec_ref_file_reader";
   --  Release an ownership share for this file reader. This destroys the file
   --  reader if there are no shares left.

   


   --------------------
   -- Event handlers --
   --------------------

   function gpr_create_event_handler
     (Data                : System.Address;
      Destroy_Func        : gpr_event_handler_destroy_callback;
      Unit_Requested_Func : gpr_event_handler_unit_requested_callback;
      Unit_Parsed_Func    : gpr_event_handler_unit_parsed_callback)
      return gpr_event_handler
      with Export        => True,
           Convention    => C,
           External_name => "gpr_create_event_handler";
   --  Create an event handler. When done with it, the result must be passed to
   --  ``gpr_dec_ref_event_handler``.
   --
   --  Pass as ``data`` a pointer to hold your private data: it will be passed
   --  to all callbacks below.
   --
   --  ``destroy`` is a callback that is called by
   --  ``gpr_dec_ref_event_handler`` to leave a chance to free resources that
   --  ``data`` may hold.
   --
   --  ``unit_requested`` is a callback that will be called when a unit is
   --  requested.
   --
   --  .. warning:: Please note that the unit requested callback can be called
   --     *many* times for the same unit, so in all likeliness, those events
   --     should be filtered if they're used to forward diagnostics to the
   --     user.
   --
   --  ``unit_parsed`` is a callback that will be called when a unit is parsed.

   procedure gpr_dec_ref_event_handler
     (Handler : gpr_event_handler)
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_dec_ref_event_handler";
   --  Release an ownership share for this event handler. This destroys the
   --  event handler if there are no shares left.

   


   --------------------
   -- Unit providers --
   --------------------

   procedure gpr_dec_ref_unit_provider
     (Provider : gpr_unit_provider)
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_dec_ref_unit_provider";
   --  Release an ownership share for this unit provider. This destroys the
   --  unit provider if there are no shares left.

   


   ------------------
   -- Struct types --
   ------------------


   -----------------
   -- Array types --
   -----------------

         



subtype gpr_gpr_node_array is Internal_Entity_Array_Access;
type gpr_gpr_node_array_Ptr is access Internal_Entity_Array_Access;

function gpr_gpr_node_array_create (Length : int) return Internal_Entity_Array_Access
   with Export        => True,
        Convention    => C,
        External_name => "gpr_gpr_node_array_create";

procedure gpr_gpr_node_array_inc_ref (A : Internal_Entity_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "gpr_gpr_node_array_inc_ref";

procedure gpr_gpr_node_array_dec_ref (A : Internal_Entity_Array_Access)
   with Export        => True,
        Convention    => C,
        External_name => "gpr_gpr_node_array_dec_ref";



   --------------------
   -- Iterator types --
   --------------------


   ----------
   -- Misc --
   ----------

   function gpr_get_last_exception return gpr_exception_Ptr
     with Export        => True,
          Convention    => C,
          External_Name => "gpr_get_last_exception";
   --  Return exception information for the last error that happened in the
   --  current thread. Will be automatically allocated on error and free'd on
   --  the next error.

   function gpr_exception_name
     (Kind : gpr_exception_kind) return chars_ptr
      with Export, Convention => C;
   --  Return the name of the given exception kind. Callers are responsible for
   --  free'ing the result.

   procedure Clear_Last_Exception;
   --  Free the information contained in Last_Exception

   procedure Set_Last_Exception (Exc : Exception_Occurrence);
   --  Free the information contained in Last_Exception and replace it with
   --  newly allocated information from Exc.

   procedure Set_Last_Exception (Id : Exception_Id; Message : String);
   --  Likewise, but put destructured exception information. This is useful to
   --  pass messages that are longer than what the Ada runtime accepts (i.e.
   --  allows to avoid truncated error messages).

   function gpr_token_kind_name (Kind : int) return chars_ptr
      with Export => True,
           Convention => C,
           External_Name => "gpr_token_kind_name";
   --  Return a human-readable name for a token kind.
   --
   --  The returned string is dynamically allocated and the caller must free it
   --  when done with it.
   --
   --  If the given kind is invalid, return ``NULL`` and set the last exception
   --  accordingly.

   procedure gpr_token_next
     (Token      : gpr_token;
      Next_Token : access gpr_token)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_token_next";
   --  Return a reference to the next token in the corresponding analysis unit.

   procedure gpr_token_previous
     (Token          : gpr_token;
      Previous_Token : access gpr_token)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_token_previous";
   --  Return a reference to the previous token in the corresponding analysis
   --  unit.

   function gpr_token_range_text
     (First, Last : gpr_token;
      Text        : access gpr_text) return int
      with Export => True,
           Convention => C,
           External_Name => "gpr_token_range_text";
   --  Compute the source buffer slice corresponding to the text that spans
   --  between the ``First`` and ``Last`` tokens (both included). This yields
   --  an empty slice if ``Last`` actually appears before ``First``. Put the
   --  result in ``RESULT``.
   --
   --  This returns ``0`` if ``First`` and ``Last`` don't belong to the same
   --  analysis unit. Return ``1`` if successful.

   function gpr_token_is_equivalent
     (Left  : gpr_token;
      Right : gpr_token) return gpr_bool
      with Export        => True,
           Convention    => C,
           External_name => "gpr_token_is_equivalent";
   --  Return whether ``L`` and ``R`` are structurally equivalent tokens. This
   --  means that their position in the stream won't be taken into account,
   --  only the kind and text of the token.

   ---------------------------------------
   -- Kind-specific AST node primitives --
   ---------------------------------------

   --  All these primitives return their result through an OUT parameter. They
   --  return a boolean telling whether the operation was successful (it can
   --  fail if the node does not have the proper type, for instance). When an
   --  AST node is returned, its ref-count is left as-is.

           
   

   
   

   function gpr_gpr_node_parent
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_parent";
   --  Return the syntactic parent for this node. Return null for the root
   --  node.

           
   

   
   

   function gpr_gpr_node_parents
     (Node : gpr_base_entity_Ptr;

         With_Self :
            
            gpr_bool;

      Value_P : access gpr_gpr_node_array) return int
